#
# Postfix Admin
# by Mischa Peters <mischa at high5 dot net>
# Copyright (c) 2002 - 2005 High5!
# Licensed under GPL for more info check GPL-LICENSE.TXT
#
Version 2.1.1 -- TBD
--------------------
  - Fixed: 'alias' instead of '$table_alias' being used by some .php files (GregC)
  - Fixed: Overview no longer lists alias entries for mailboxes (GregC)
  - Changed: Added exit buttons to several edit options. (GregC)
  - Fixed: user options are a little more idiot-proof, templates are consistent (GregC)
  - Changed: Users can view and edit their vacation config (GregC)
  - Added: Slovakian language posted on SourceForge by eszabo
  - Changed: searches include mailbox.name matches (GregC)
  - Fixed: function check_email will ignore vacation_domain if vacation==YES (GregC)
  - Changed: applied patches from Christian Boltz posted at 
    http://www.cboltz.de/tmp/postfixadmin-3.patch, referenced at
    https://sourceforge.net/tracker/index.php?func=detail&aid=1696647&group_id=191583&atid=937966 (GregC)
  - Added: main.php to admin dirctory (GregC)
  - Added: Item "Main" on admin menu (GregC)
  - Changed: Edit-vacation now edits for admins/superadmins (GregC)
  - Added: Do not store local copy when forward mail. (Mihau) [24] 
  - Added: Virtual Vacation for PostgreSQL. (Tarvin)
  - Added: Virtual Vacation 3.2 (Thanx David)
  - Added: SUBJECT tag for Virtual Vacation.         
  - Added: Dovecot setup document for Postfix Admin. (Thanx Massimo)
  - Added: SquirrelMail plugin to change_password.
  - Changed: Starting to merge /admin in root. (Mihau)
  - Changed: Moved some TXT files to DOCUMENTS.   
  - Changed: Updated tw.lang. (Thanx Bruce)
  - Fixed: Usage of mysql_real_escape_string(). (Mihau)
  - Fixed: Calculating of quotas. (Mihau)
  - Fixed: Password generation when creating a new account. (Mihau)
  - Fixed: PostgreSQL patches. (Tarvin)
  - Fixed: Adding of multiple aliases. (Mihau)
  - Fixed: CSS Menu width. (Mihau)